--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ VITE_CLOUDFLARE_TOKEN=B11-hQKlEsJDAaUQd_HWbpuiH76ctVySxMqgxZvE
 VITE_CLOUDFLARE_BUCKET_NAME=emetstudio-bucket-2025
 VITE_IMAGE_DOMAIN=https://pub-a15fad1bb05e4ecbb92c9d83b643a721.r2.dev
 VITE_FROM_EMAIL_ADDRESS=test@estrategiags.com
+VITE_FRONTEND_ENDPOINT="https://sistemaquejas.emetstudio.com"
